--- a/shop.html
+++ b/shop.html
@@ -75,15 +75,18 @@
         </div>
         <div class="menu">
             <div class="select">
-                <a href="#" style="text-decoration: none" onclick="return select()"><div class="s1">
-                    <h3>EARLY BIRD</h3>
-                    <a>17/9 - 24/9/2017</a>
-                </div></a>
+                <a href="#" style="text-decoration: none" onclick="return select()">
+                    <div class="s1">
+                        <h3>EARLY BIRD</h3>
+                        <a>17/9 - 24/9/2017</a>
+                    </div>
+                </a>
                 <a href="#" style="text-decoration: none" onclick="return remove()">
                     <div class="s2">
-                    <h3>ONLINE SALES</h3>
-                    <a>17/9 - 24/9/2017</a>
-                </div></a>
+                        <h3>ONLINE SALES</h3>
+                        <a>17/9 - 24/9/2017</a>
+                    </div>
+                </a>
                 <div class="s3">
                     <h3>OFFLINE SALES</h3>
                     <a>---</a>
@@ -97,9 +100,12 @@
                         <a class="money">330.000 VND</a><br>
                         <div class="thongtin">
                             <br>
-                            <a>Tham gia 1 ngày trong sự kiện </a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
-                            <a>Được vào khu Fanzone</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
-                            <a>Tầm quan sát thông thường</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Tham gia 1 ngày trong sự kiện </a><i class="fa fa-check-circle"
+                                                                    style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Được vào khu Fanzone</a><i class="fa fa-check-circle"
+                                                          style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Tầm quan sát thông thường</a><i class="fa fa-check-circle"
+                                                               style="font-size:22px;color: #65ac4c"></i><br>
                             <a>Khu vực dành riêng x</a>
                             <a id="enony1"></a>
                         </div>
@@ -113,9 +119,12 @@
                         <a class="money">330.000 VND</a><br>
                         <div class="thongtin">
                             <br>
-                            <a>Tham gia 1 ngày trong sự kiện </a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
-                            <a>Được vào khu Fanzone</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
-                            <a>Tầm quan sát thông thường</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Tham gia 1 ngày trong sự kiện </a><i class="fa fa-check-circle"
+                                                                    style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Được vào khu Fanzone</a><i class="fa fa-check-circle"
+                                                          style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Tầm quan sát thông thường</a><i class="fa fa-check-circle"
+                                                               style="font-size:22px;color: #65ac4c"></i><br>
                             <a>Khu vực dành riêng x</a>
                             <a id="enony2"></a>
                         </div>
@@ -129,9 +138,12 @@
                         <a class="money">330.000 VND</a><br>
                         <div class="thongtin">
                             <br>
-                            <a>Tham gia 1 ngày trong sự kiện </a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
-                            <a>Được vào khu Fanzone</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
-                            <a>Tầm quan sát thông thường</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Tham gia 1 ngày trong sự kiện </a><i class="fa fa-check-circle"
+                                                                    style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Được vào khu Fanzone</a><i class="fa fa-check-circle"
+                                                          style="font-size:22px;color: #65ac4c"></i><br>
+                            <a>Tầm quan sát thông thường</a><i class="fa fa-check-circle"
+                                                               style="font-size:22px;color: #65ac4c"></i><br>
                             <a>Khu vực dành riêng x</a>
                             <a id="enony3"></a>
                         </div>
@@ -140,14 +152,73 @@
                 </div>
             </div>
         </div>
+        <div class="menu-combo">
+            <h2>COMBO ĐỒ ĂN EARLY BIRD</h2>
+            <div style="background: #CF5F4E" class="combo">
+                <div class="c1-1">
+                    <a>COMBO<br> ĐỒ CHIÊN<br> 221.000VND</a>
+                    <a></a>
+                </div>
+                <img src="images/combo-chien.png" height="140px" width="140px">
+                <div class="c1-2">
+                    <a>Khoai tây chiên </a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                    <a>Donut tôm</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                    <a>Gà Karaage</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                    <a>Xúc xích</a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                    <a>2 nước tự chọn
+                        (Pepsi, Aquafina, Tuborg)</a><i class="fa fa-check-circle"
+                                                        style="font-size:22px;color: #65ac4c"></i><br>
+                </div>
+                <a class="muangay">MUA NGAY</a>
+            </div>
+            <div style="background: #CF5F4E" class="combo">
+                <div class="c1-1">
+                    <a>COMBO<br> PIZZA CHICAGO<br> 153.000VND</a>
+                    <a></a>
+                </div>
+                <img src="images/pizza.png" height="140px" width="140px">
+                <div class="c1-2">
+                    <a>Chicago Pizza </a><i class="fa fa-check-circle" style="font-size:22px;color: #65ac4c"></i><br>
+                    <a>2 nước tự chọn
+                        (Pepsi, Aquafina, Tuborg) </a><i class="fa fa-check-circle"
+                                                         style="font-size:22px;color: #65ac4c"></i><br>
+                </div>
+                <a class="muangay">MUA NGAY</a>
+            </div>
+            <div style="background: #65ac4c" class="combo">
+                <div class="c1-1">
+                    <a>COMBO BIA<br> TUBORG<br> 76.000VND</a>
+                    <a></a>
+                </div>
+                <img src="images/BIA3.png" height="140px" width="140px">
+                <div class="c1-2">
+                    <a>Thưởng thức 3 cốc bia Tuborg </a><i class="fa fa-check-circle"
+                                                           style="font-size:22px;color: #65ac4c"></i><br>
+                </div>
+                <a class="muangay">MUA NGAY</a>
+            </div>
+            <div style="background: #65ac4c" class="combo">
+                <div class="c1-1">
+                    <a>COMBO BIA<br> TUBORG<br> 153.000VND</a>
+                    <a></a>
+                </div>
+                <img src="images/coctuborg.png" height="140px" width="140px">
+                <div class="c1-2">
+                    <a>Thưởng thức 6 cốc bia Tuborg </a><i class="fa fa-check-circle"
+                                                           style="font-size:22px;color: #65ac4c"></i><br>
+                </div>
+                <a class="muangay">MUA NGAY</a>
+            </div>
+        </div>
     </div>
 </article>
 <script>
     var element1 = document.getElementById("enony1");
     var element2 = document.getElementById("enony2");
     var element3 = document.getElementById("enony3");
-    var vethuong   = document.getElementById("vethuong");
-    function select () {
+    var vethuong = document.getElementById("vethuong");
+
+    function select() {
         element1.innerHTML = "<br><a>Chi phí tối ưu</a><i class=\"fa fa-check-circle\" style=\"font-size:22px;color: #65ac4c\"></i>";
         element2.innerHTML = "<br><a>Chi phí phí tiết kiệm nhất</a><i class=\"fa fa-check-circle\" style=\"font-size:22px;color: #65ac4c\"></i>";
         element3.innerHTML = "<br><a>Miễn phí đồ uống</a><i class=\"fa fa-check-circle\" style=\"font-size:22px;color: #65ac4c\"></i>";
@@ -155,7 +226,8 @@
         console.log(vethuong.innerText);
         vethuong.innerHTML = "VÉ 10/11(DAY)1";
     }
-    function  remove() {
+
+    function remove() {
         element1.innerHTML = "";
         element2.innerHTML = "";
         element3.innerHTML = "";
