--- a/artist.html
+++ b/artist.html
@@ -26,18 +26,18 @@
             <ul>
                 <li><a href="introduce.html">GIỚI THIỆU</a>
                 </li>
-                <li><a href="#">NGHỆ SĨ</a>
+                <li><a href="artist.html">NGHỆ SĨ</a>
                 </li>
-                <li><a href="#">SHOP</a>
+                <li><a href="shop.html">SHOP</a>
                 </li>
-                <li><a href="#">ĐỐI TÁC</a>
+                <li><a href="DoiTac.html">ĐỐI TÁC</a>
                 </li>
                 <li><a href="#">TÌM HIỂU THÊM</a>
                     <ul>
-                        <li><a href="#">MMF 2016</a></li>
-                        <li><a href="#">MMF 2015</a></li>
-                        <li><a href="#">MMF 2014</a></li>
-                        <li><a href="#">TRÁCH NHIỆM XÃ HỘI</a></li>
+                        <li><a href="event2016.html">MMF 2016</a></li>
+                        <li><a href="event2015.html">MMF 2015</a></li>
+                        <li><a href="event2014.html">MMF 2014</a></li>
+                        <li><a href="TrachNhiemXaHoi.html">TRÁCH NHIỆM XÃ HỘI</a></li>
                     </ul>
                 </li>
                 <li><a href="#">THƯ VIỆN</a>
@@ -78,75 +78,76 @@
         </div>
         <div class="content-artist">
             <div class="singer">
-                <img src="images/1.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
-                <img src="images/2.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
-                <img src="images/3.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
-                <img src="images/4.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
-                <img src="images/5.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
                 <img src="images/6.jpg">
                 <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
-                <img src="images/7.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                    <a href="ChiTietNgheSi1.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
                 </div>
             </div>
             <div class="singer">
                 <img src="images/8.jpg">
                 <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                    <a href="ChiTietNgheSy2.html">GARDEN CITY MOVEMENT - 12/11
+                        Israel</a>
                 </div>
             </div>
             <div class="singer">
                 <img src="images/9.jpg">
                 <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
-                <img src="images/10.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
-                </div>
-            </div>
-            <div class="singer">
-                <img src="images/11.jpg">
-                <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                    <a href="ChiTietNgheSy3.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
                 </div>
             </div>
             <div class="singer">
                 <img src="images/12.jpg">
                 <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                    <a href="ChiTietNgheSy4.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/7.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy5.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/5.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy6.html" r>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/2.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy7.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/11.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy8.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/10.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy9.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/4.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy10.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/3.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy11.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                </div>
+            </div>
+            <div class="singer">
+                <img src="images/1.jpg">
+                <div class="detail">
+                    <a href="ChiTietNgheSy8.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
                 </div>
             </div>
         </div>
