Hieu Pikas commit 09/04/2018 lienhe

--- a/LienHe.html
+++ b/LienHe.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/LienHe.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese"
@@ -11,6 +12,65 @@
         ::-webkit-input-placeholder {
             color: #959595;
             font-size: 18px;
+        }
+
+        @media all and (max-width: 414px) {
+            body {
+                background-attachment: scroll;
+                text-align: justify;
+            }
+
+            .time a {
+                display: none;
+            }
+
+            .relative {
+                display: none;
+            }
+
+            .title p {
+                font-size: 40px;
+                line-height: 70px;
+                position: absolute;
+                bottom: 50px;
+                left: 20%;
+            }
+
+            article {
+                width: 100%;
+                margin-left: 0%;
+            }
+
+            .map {
+                height: 100%;
+            }
+
+            .info1 {
+                width: 90%;
+                height: 100%;
+                clear: both;
+                margin-left: 10%;
+            }
+
+            .info2 {
+                width: 90%;
+                height: 100%;
+                clear: both;
+                margin-left: 10%;
+            }
+
+            .info3 {
+                margin-top: 300px;
+                width: 90%;
+                height: 100%;
+                clear: both;
+                margin-left: 10%;
+            }
+
+            p {
+                font-size: 40px;
+                line-height: 80px;
+            }
         }
     </style>
     <title>Liên hệ - Monsoon Music Festival 2017</title>
@@ -153,7 +213,6 @@
                     <blockquote cite="https://www.facebook.com/thanhviet.pro.vn/" class="fb-xfbml-parse-ignore"><a
                             href="https://www.facebook.com/thanhviet.pro.vn/">Thanh Việt Production</a></blockquote>
                 </div>
-
             </div>
         </div>
     </div>
