gan link 1 so trang

--- a/artist.html
+++ b/artist.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
     </style>
-    <title>Nghệ sĩ tham dự </title>
+    <title>Nghệ sĩ </title>
 
 </head>
 <body>
