--- a/artist.html
+++ b/artist.html
@@ -80,13 +80,13 @@
             <div class="singer">
                 <img src="images/1.jpg">
                 <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                    <a href="ChiTietNgheSi1.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
                 </div>
             </div>
             <div class="singer">
                 <img src="images/2.jpg">
                 <div class="detail">
-                    <a>ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
+                    <a href="ChiTietNgheSy2.html">ĐÔNG HÙNG - 10/11 VIỆT NAM</a>
                 </div>
             </div>
             <div class="singer">
