--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
                         <li><a href="gioithieusinger.html">VIDEO</a></li>
                     </ul>
                 </li>
-                <li><a href="#">LIÊN HỆ</a>
+                <li><a href="LienHe.html">LIÊN HỆ</a>
                 </li>
             </ul>
         </div>
@@ -109,7 +109,7 @@
                             <a>Khu vực dành riêng x</a>
                             <a id="enony1"></a>
                         </div>
-                        <a class="submit_buy">MUA NGAY</a>
+                        <a href="http://ticket.monsoonfestival.vn/" class="submit_buy">MUA NGAY</a>
                     </div>
                 </div>
                 <div class="c2">
@@ -128,7 +128,7 @@
                             <a>Khu vực dành riêng x</a>
                             <a id="enony2"></a>
                         </div>
-                        <a class="submit_buy">MUA NGAY</a>
+                        <a href="http://ticket.monsoonfestival.vn/" class="submit_buy">MUA NGAY</a>
                     </div>
                 </div>
                 <div class="c3">
@@ -147,7 +147,7 @@
                             <a>Khu vực dành riêng x</a>
                             <a id="enony3"></a>
                         </div>
-                        <a class="submit_buy">MUA NGAY</a>
+                        <a href="http://ticket.monsoonfestival.vn/" class="submit_buy">MUA NGAY</a>
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                         (Pepsi, Aquafina, Tuborg)</a><i class="fa fa-check-circle"
                                                         style="font-size:22px;color: #65ac4c"></i><br>
                 </div>
-                <a class="muangay">MUA NGAY</a>
+                <a href="http://ticket.monsoonfestival.vn/" class="muangay">MUA NGAY</a>
             </div>
             <div style="background: #CF5F4E" class="combo">
                 <div class="c1-1">
@@ -183,7 +183,7 @@
                         (Pepsi, Aquafina, Tuborg) </a><i class="fa fa-check-circle"
                                                          style="font-size:22px;color: #65ac4c"></i><br>
                 </div>
-                <a class="muangay">MUA NGAY</a>
+                <a href="http://ticket.monsoonfestival.vn/" class="muangay">MUA NGAY</a>
             </div>
             <div style="background: #65ac4c" class="combo">
                 <div class="c1-1">
@@ -195,7 +195,7 @@
                     <a>Thưởng thức 3 cốc bia Tuborg </a><i class="fa fa-check-circle"
                                                            style="font-size:22px;color: #65ac4c"></i><br>
                 </div>
-                <a class="muangay">MUA NGAY</a>
+                <a href="http://ticket.monsoonfestival.vn/" class="muangay">MUA NGAY</a>
             </div>
             <div style="background: #65ac4c" class="combo">
                 <div class="c1-1">
