--- a/ChiTietNgheSi1.html
+++ b/ChiTietNgheSi1.html
@@ -42,7 +42,7 @@
                         <li><a href="gioithieusinger.html">VIDEO</a></li>
                     </ul>
                 </li>
-                <li><a href="#">LIÊN HỆ</a>
+                <li><a href="LienHe.html">LIÊN HỆ</a>
                 </li>
             </ul>
         </div>
