--- a/LienHe.html
+++ b/LienHe.html
@@ -105,7 +105,7 @@
                         <li><a href="gioithieusinger.html">VIDEO</a></li>
                     </ul>
                 </li>
-                <li><a href="#">LIÊN HỆ</a>
+                <li><a href="LienHe.html">LIÊN HỆ</a>
                 </li>
             </ul>
         </div>
