--- a/event2016.html
+++ b/event2016.html
@@ -178,7 +178,7 @@
                         <li><a href="gioithieusinger.html">VIDEO</a></li>
                     </ul>
                 </li>
-                <li><a href="#">LIÊN HỆ</a>
+                <li><a href="LienHe.html">LIÊN HỆ</a>
                 </li>
             </ul>
         </div>
